<resources>
    <string name="about_us">       \t Peoples Bench is a company which provides solution on Web Development, App Development and Online Marketing.\n
      \n \t Another venture of a Game Redesigning startup Fifa Modders.
       \n \n  \tWe also provide affordable Web Designing and App Designing packages to the customers making us
       perfect package for Newbie StartUps.  </string>
    <string name="des">        \n\n DESIGN TEAM
        
        \n\n\n  APP DEVELOPMENT 
       \n Mohamed Abdur Rahman
		
	 \n\n\nCONTENT MANAGEMENT
       \nNaveen Kumar R.B
       \nKarthikeyan
       
       \n\n\n GRAPHIC DESIGN 
      \nKarthick
	  \nMohamed Mubeen</string>
    <string name="app_name">Endroid ECE</string>
    <string name="action_settings">Settings</string>
    <string name="first_semester">FIRST SEMESTER</string>
    <string name="second_semester">SECOND SEMESTER</string>
    <string name="third_semester">THIRD SEMESTER</string>
    <string name="button">CALCULATE</string>
    <string name="gparesult">RESULT</string>
    <string name="gpais">Your GPA is</string>
    <string name="gpaval">9.8</string>
    <string name="chem1name">CY 6151</string>
    <string name="chem1code">ENGINEERING CHEMISTRY - 1</string>
    <string name="cpname">GE 6151</string>
    <string name="cpcode">COMPUTER PROGRAMMING</string>
    <string name="ph1name">PH 6151</string>
    <string name="ph1code">ENGINEERING PHYSICS - 1</string>
    <string name="egname">GE 6152</string>
    <string name="egcode">ENGINEERING GRAPHICS</string>
    <string name="eng1name">HS 6151</string>
    <string name="eng1code">TECHNICAL ENGLISH - 1</string>
    <string name="m1name">MA 6151</string>
    <string name="m1code">MATHEMATICS - 1</string>
    <string name="cplname">GE 6161</string>
    <string name="cplcode">COMPUTER PRACTICES LAB</string>
    <string name="eglname">GE 6162</string>
    <string name="eglcode">ENGINEERING PRACTICES LAB</string>
    <string name="pclname">GE 6163</string>
    <string name="pclcode">PHYSICS AND CHEMISTRY LAB - 1</string>
    <string name="chem2name">CY 6251</string>
    <string name="chem2code">ENGINEERING CHEMISTRY - 2</string>
    <string name="edname">EC 6201</string>
    <string name="edcode">ELECTRONIC DEVICES</string>
    <string name="ph2name">PH 6251</string>
    <string name="ph2code">ENGINEERING PHYSICS - 2</string>
    <string name="ctname">EE 6201</string>
    <string name="ctcode">CIRCUIT THEORY</string>
    <string name="eng2name">HS 6251</string>
    <string name="eng2code">TECHNICAL ENGLISH - 2</string>
    <string name="m2name">MA 6251</string>
    <string name="m2code">MATHEMATICS - 2</string>
    <string name="cdlname">EC 6211</string>
    <string name="cdlcode">CIRCUITS AND DEVICES LAB</string>
    <string name="pcl2name">GE 6163</string>
    <string name="pcl2code">PHYSICS AND CHEMISTRY LAB - 2</string>
    <string name="odsname">EC 6301</string>
    <string name="odscode">OOPS AND DS</string>
    <string name="dename">EC 6302</string>
    <string name="decode">DIGITAL ELECTRONICS</string>
    <string name="ssname">EC 6303</string>
    <string name="sscode">SIGNALS AND SYSTEMS</string>
    <string name="ec1name">EC 6304</string>
    <string name="ec1code">ELECTRONIC CIRCUITS - 1</string>
    <string name="eeiname">EC 6305</string>
    <string name="eeicode">ELECTRONIC ENGINEERING </string>
    <string name="m3name">MA 6351</string>
    <string name="m3code">MATHEMATICS - 3</string>
    <string name="adclname">EC 6311</string>
    <string name="adclcode">ANALOG-DIGITAL CIRCUITS LAB</string>
    <string name="odlname">EC 6312</string>
    <string name="odlcode">OOPS AND DS LAB</string>
    <string name="ec2name">EC 6401</string>
    <string name="ec2code">ELECTRONIC CIRCUITS - 2</string>
    <string name="licname">EC 6404</string>
    <string name="liccode">LINEAR INTEGERATED CIRCUITS</string>
    <string name="cmtname">EC 6402</string>
    <string name="cmtcode">COMMUNICATION THEORY</string>
    <string name="csname">EC 6405</string>
    <string name="cscode">CONTROL SYSTEMS</string>
    <string name="emfname">EC 6403</string>
    <string name="emfcode">ELECTROMAGNETIC FIELDS</string>
    <string name="m4name">MA 6451</string>
    <string name="m4code">MATHEMATICS - 4</string>
    <string name="cslname">EC 6411</string>
    <string name="cslcode">CIRCUITS AND SIMULATION LAB</string>
    <string name="lilname">EC 6412</string>
    <string name="lilcode">LINEAR INTEGERATION LAB</string>
    <string name="ecslname">EE 6461</string>
    <string name="ecslcode">EE AND CS LABORATORY</string>
    <string name="dcname">EC 6501</string>
    <string name="dccode">DIGITAL COMMUNICATION</string>
    <string name="mpmcname">EC 6504</string>
    <string name="mpmccode">MICROPROCESSOR-CONTROLLER</string>
    <string name="evsname">GE 6351</string>
    <string name="evscode">EVS ENGINEEERING</string>
    <string name="dspname">EC 6502</string>
    <string name="dspcode">DIGITAL SIGNAL PROCESSING</string>
    <string name="tlwname">EC 6503</string>
    <string name="tlwcode">TRANSMISSIONS-WAVEGUIDES</string>
    <string name="dsplname">EC 6511</string>
    <string name="dsplcode">DIGITAL SIGNALS LAB</string>
    <string name="cmslname">EC 6512</string>
    <string name="cmslcode">COMMUNICATION SYSTEMS LAB</string>
    <string name="mpmclname">EC 6513</string>
    <string name="mpmclcode">MICROPROCESSORS LAB</string>
    <string name="caname">CS 6303</string>
    <string name="cacode">COMPUTER ARCHITECTURE</string>
    <string name="cnname">CS 6551</string>
    <string name="cncode">COMPUTER NETWORKS</string>
    <string name="vlsiname">EC 6601</string>
    <string name="vlsicode">VLSI DESIGN</string>
    <string name="el61name">ELECTIVE 1</string>
    <string name="el61code">CLICK TO CHOOSE</string>
    <string name="awpname">EC 6602</string>
    <string name="awpcode">ANTENNA AND WAVE</string>
    <string name="pomname">MG 6851</string>
    <string name="pomcode">PRINCIPLES OF MANAGEMENT</string>
    <string name="cnlname">EC 6611</string>
    <string name="cnlcode">COMPUTER NETWORKS LAB</string>
    <string name="vlsilname">EC 6612</string>
    <string name="vlsilcode">VLSI DESIGN LAB</string>
    <string name="englname">GE 6674</string>
    <string name="englcode">COMMUNICATION SKILLS LAB</string>
    <string name="rfname">EC 6701</string>
    <string name="rfcode">RF AND MICROWAVE ENGINEER.</string>
    <string name="ocnname">EC 6702</string>
    <string name="ocncode">OPTICAL COMMUNICATION</string>
    <string name="emname">EC 6703</string>
    <string name="emcode">EMBEDDED AND REAL TIME</string>
    <string name="el71name">ELECTIVE 2</string>
    <string name="el71code">CLICK TO CHOOSE</string>
    <string name="el72name">ELECTIVE 3</string>
    <string name="el72code">CLICK TO CHOOSE</string>
    <string name="el73name">ELECTIVE 4</string>
    <string name="el73code">CLICK TO CHOOSE</string>
    <string name="emlname">EC 6711</string>
    <string name="emlcode">EMBEDDED LABARATORY</string>
    <string name="omlname">EC 6712</string>
    <string name="omlcode">OPTICAL AND MICROWAVE LAB</string>
    <string name="wcname">EC 6801</string>
    <string name="wccode">WIRELESS COMMUNICATION</string>
    <string name="wnname">EC 6802</string>
    <string name="wncode">WIRELESS NETWORKS</string>
    <string name="el81name">ELECTIVE 5</string>
    <string name="el81code">CLICK TO CHOOSE</string>
    <string name="el82name">ELECTIVE 6</string>
    <string name="el82code">CLICK TO CHOOSE</string>
    <string name="pname">EC 6811</string>
    <string name="pcode">PROJECT WORK</string>
    <string name="gpa">GPA</string>
    <string name="title_activity_splash1"></string>
    <string name="todo">TODO</string>
    <string name="title_activity_main"></string>
    <string name="title_activity_splash2"></string>
    <string name="title_activity_results">GPA</string>
    <string name="title_activity_first_semester">FIRST SEMESTER</string>
    <string name="title_activity_second_semester">SECOND SEMESTER</string>
    <string name="title_activity_third_semester">THIRD SEMESTER</string>
    <string name="title_activity_index">Endroid ECE</string>
    <string name="handbook_ece">ENDROID ECE</string>
    <string name="title_activity_cgpa">CGPA</string>
    <string name="semesters">SEMESTERS</string>
    <string name="title_activity_fourth_semester">FOURTH SEMESTER</string>
    <string name="fourth_semester">FOURTH SEMESTER</string>
    <string name="title_activity_fifth_semester">FIFTH SEMESTER</string>
    <string name="fifth_semester">FIFTH SEMESTER</string>
    <string name="title_activity_sixth_semester">SIXTH SEMESTER</string>
    <string name="sixth_semester">SIXTH SEMESTER</string>
    <string name="title_activity_seventh_semester">SEVENTH SEMESTER</string>
    <string name="hello_world">Hello world!</string>
    <string name="seventh_semester">SEVENTH SEMESTER</string>
    <string name="title_activity_eight_semester">EightSemester</string>
    <string name="_color_white">\@color/white</string>
    <string name="eight_semester">EIGHT SEMESTER</string>
    <string name="index">INDEX</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="clearall">Clear All</string>
    <string name="your_cgpa_is">Your CGPA is</string>
    <string name="title_activity_cgparesults">CGPA</string>
    <string name="title_activity_syllabus">Syllabus</string>
    <string name="title_activity_aboutus">About us</string>
    <string name="title_activity_fisrt_chemistry">Chemistry I</string>
    <string name="title_activity_notes_semesters">Notes</string>
    <string name="title_activity_notes_subjects">Subjects</string>
    <string name="title_activity_first_maths">Maths I</string>
    <string name="title_activity_first_eg">Engg.Graphics</string>
    <string name="title_activity_first_physics">Physics I</string>
    <string name="title_activity_first_cp">Comp.Programming I</string>
    <string name="title_activity_first_eng">English I</string>
    <string name="title_activity_qp_semesters">Question Papers</string>
    <string name="title_activity_qp_subjects1">Subjects</string>
    <string name="title_activity_qp_chem1">Chemistry 1 QP</string>
    <string name="title_activity_qp_m1">Engg.Maths 1 QP</string>
    <string name="title_activity_qp_phy1">Physics 1 QP</string>
    <string name="title_activity_qp_eng1">English 1 QP</string>
    <string name="title_activity_qp_cp">Comp.Programming QP</string>
    <string name="title_activity_qp_eg">Engg.Graphics QP</string>
    <string name="title_activity_notes_subjects2">Subjects</string>
    <string name="title_activity_sec_chemistry">Chemistry II</string>
    <string name="title_activity_sec_maths2">Maths II</string>
    <string name="title_activity_sec_physics">Physics II</string>
    <string name="title_activity_sec_ct">Circuit Theory</string>
    <string name="title_activity_sec_eng">English II</string>
    <string name="title_activity_sec_ed">Electronic Devices</string>
    <string name="title_activity_notes_subjects3">Subjects</string>
    <string name="title_activity_third_ec1">Electronic circuits I</string>
    <string name="title_activity_third_tpde">Maths 3</string>
    <string name="title_activity_third_de">Digital Electronics</string>
    <string name="title_activity_third_ss">Signal and Systems</string>
    <string name="title_activity_third_eei">Electrical and Elec Instr.</string>
    <string name="title_activity_third_oops">OOPS</string>
    <string name="title_activity_notes_subjects4">Subjects</string>
    <string name="title_activity_four_ec2">Electronic Circuits II</string>
    <string name="title_activity_four_ct">Communication Theory</string>
    <string name="title_activity_four_cs">Control Systems</string>
    <string name="title_activity_four_emf">Electromagnetic Fields</string>
</resources>