<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView1"
     android:layout_marginBottom="50dp"
     >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >   
    
    <!-- chem 1 start-->
    
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/gradient_bottom"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="0dp"
        android:paddingTop="8dp"
       
        tools:ignore="RtlHardcoded" >

         <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wcname"
            android:textSize="14sp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
         <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wccode"
            android:textSize="14sp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

		</LinearLayout>

         <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
             android:gravity="right"
             android:orientation="horizontal"
             >
         
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:drawSelectorOnTop="true"
            android:textSize="20sp"
            android:entries="@array/SpinnerItems"
            tools:ignore="RtlHardcoded" />
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="18dp"
        android:background="@drawable/gradient_bottom"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="0dp"
        android:paddingTop="8dp"
        tools:ignore="RtlHardcoded,ObsoleteLayoutParam" >

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wnname"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wncode"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="14sp" />
        </LinearLayout>
		
        
         <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
             android:gravity="right"
             android:orientation="horizontal"
             >
         
        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:entries="@array/SpinnerItems"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout11"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout9"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/gradient_bottom"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:paddingTop="8dp"
                    tools:ignore="RtlHardcoded,ObsoleteLayoutParam" >

                    <LinearLayout
                        android:id="@+id/linearLayout12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/el81name"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textSize="14sp" 
                            android:onClick="onelclick"
                    android:clickable="true"/>

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/el81code"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textSize="14sp" 
                            android:onClick="onelclick"
                    android:clickable="true"/>
                    </LinearLayout>

                 <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
             android:gravity="right"
             android:orientation="horizontal"
             >   
                    
                    <Spinner
                        android:id="@+id/spinner5"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"                       
                        android:entries="@array/SpinnerItems"
                        android:textSize="20sp"
                        tools:ignore="RtlHardcoded" />
                    </LinearLayout>
                </LinearLayout>
                
                                <LinearLayout
                                    android:id="@+id/linearLayout13"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/linearLayout11"
                                    android:layout_marginTop="18dp"
                                    android:background="@drawable/gradient_bottom"
                                    android:orientation="horizontal"
                                    android:paddingBottom="8dp"
                                    android:paddingLeft="10dp"
                                    android:paddingRight="0dp"
                                    android:paddingTop="8dp"
                                    tools:ignore="RtlHardcoded,ObsoleteLayoutParam" >

                    <LinearLayout
                        android:id="@+id/linearLayout14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/el82name"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textSize="14sp" 
                            android:onClick="twolclick"
                    android:clickable="true"/>

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/el82code"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textSize="14sp" 
                            android:onClick="twolclick"
                    android:clickable="true"/>
                    </LinearLayout>

                    <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
             android:gravity="right"
             android:orientation="horizontal"
             >
                    
                    <Spinner
                        android:id="@+id/spinner6"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:entries="@array/SpinnerItems"
                        android:textSize="20sp"
                        tools:ignore="RtlHardcoded" />
                    </LinearLayout>
                </LinearLayout>
                
                                                <LinearLayout
                                                    android:id="@+id/linearLayout15"
                                                    android:layout_width="fill_parent"
                                                    android:layout_height="wrap_content"
                                                    android:layout_below="@+id/linearLayout13"
                                                    android:layout_marginBottom="60dp"
                                                    android:layout_marginTop="18dp"
                                                    android:background="@drawable/gradient_bottom"
                                                    android:orientation="horizontal"
                                                    android:paddingBottom="8dp"
                                                    android:paddingLeft="10dp"
                                                    android:paddingRight="0dp"
                                                    android:paddingTop="8dp"
                                                    tools:ignore="RtlHardcoded,ObsoleteLayoutParam" >

                    <LinearLayout
                        android:id="@+id/linearLayout16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/pname"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/pcode"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
             android:gravity="right"
             android:orientation="horizontal"
             >
                    
                    <Spinner
                        android:id="@+id/spinner7"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:entries="@array/SpinnerItems"
                        android:textSize="20sp"
                        tools:ignore="RtlHardcoded" />
                    </LinearLayout>
                </LinearLayout>
                
                    

                     
                        
     
                     
        
</LinearLayout>
</ScrollView>

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="fill_parent"
		    android:layout_height="40dp"
		    android:layout_gravity="top"
		    android:gravity="center_horizontal"
		    android:background="@color/blue"
		    android:fontFamily="sans-serif-condensed"
		    
		   
		    android:paddingTop="10dp"
		    android:text="@string/eight_semester"
		    android:textColor="@color/white"
		    android:textSize="18sp"
		    tools:ignore="UnusedAttribute,RtlSymmetry" />

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:fontFamily="sans-serif-condensed"
            android:onClick="onSubClick"
            android:text="@string/button"
            android:textColor="@color/white"
            tools:ignore="UnusedAttribute"
            android:layout_gravity="bottom"
            />

</FrameLayout>