<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

<TextView
		    android:id="@+id/textView1"
		    android:layout_width="fill_parent"
		    android:layout_height="40dp"
		    android:layout_gravity="top"
		    android:background="@color/blue"
		    android:fontFamily="sans-serif-condensed"
		    android:gravity="center_horizontal"
		    android:paddingTop="10dp"
		    android:text="@string/gparesult"
		    android:textColor="@color/white"
		    android:textSize="18sp"
		    tools:ignore="UnusedAttribute,RtlSymmetry" />

<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView1" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="98dp"
    android:color="#ffffff" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >   
    
                     <LinearLayout
                         android:id="@+id/linearLayout19"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="25dp"
                            android:background="@drawable/gradient_one"
                          android:gravity="center_horizontal"
                         android:orientation="horizontal"
                         android:paddingBottom="8dp"
                         android:paddingLeft="10dp"
                         android:paddingRight="0dp"
                         android:paddingTop="8dp"
                         tools:ignore="RtlHardcoded" >

                         <TextView
                             android:id="@+id/textView19"
                             android:layout_width="wrap_content"
                             android:layout_height="50dp"
                             android:layout_marginBottom="10dp"
                             android:fontFamily="sans-serif-condensed"
                             android:layout_gravity="center_horizontal"
                             android:paddingTop="10dp"
                             android:text="@string/your_cgpa_is"
                             android:textAppearance="?android:attr/textAppearanceLarge"
                             android:textColor="@color/blue"
                             android:textSize="30sp"
                             tools:ignore="RtlSymmetry,UnusedAttribute" />
                    
                </LinearLayout>

                     <LinearLayout
                         android:id="@+id/linearLayout20"
                         android:layout_width="fill_parent"
                         android:layout_height="300dp"
                         android:layout_alignParentLeft="true"
                         android:layout_marginTop="100dp"
                         android:orientation="horizontal"
                         android:paddingBottom="8dp"
                         android:paddingTop="8dp"
                         tools:ignore="RtlHardcoded"
                         android:color="#ffffff" 
                          android:background="@color/white"
                         >

                         <TextView
                             android:id="@+id/textView20"
                             android:layout_width="match_parent"
                             android:layout_height="332dp"
                             android:fontFamily="sans-serif-condensed"
                             android:gravity="center_horizontal"
                             android:paddingTop="75dp"
                             android:text="@string/gpaval"
                             android:textAppearance="?android:attr/textAppearanceLarge"
                             android:textColor="@color/red"
                             android:textSize="120sp"
                             tools:ignore="RtlSymmetry,UnusedAttribute" 
                              android:background="@color/white"
                             />
                    
                </LinearLayout>                        
     
                     
        
</RelativeLayout>
</ScrollView>


</FrameLayout>